# Koyuki-chan-Telegram

./: config.py  main.py  pyproject.toml  readme.md
.github/workflows/: ruff.yml
cogs/: homework_help.py  logging.py  main_menu.py  navigation.py
routers/: __init__.py  bot_help.py  bot_info.py  homework_help.py  homework_list.py  logging.py  main_menu.py  navigation.py  webinar_records.py
