[tool.poetry]
name = "koyuki-chan-telegram"
version = "1.0"
description = "Ваш помошник по курсу \"Код будущего\" в изучении языка python"
authors = ["Milinuri Nirvalen <pentergust@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
aiogram = "^3.10.0"
aiocache = "^0.12.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ruff = "^0.5.5"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "N", "PL"]
ignore = ["D407", "D107", "D213", "D203"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
